@@ -148,7 +148,7 @@ function chimps_index_loop_content($content) { ?>
 					<!--Call @Core Meta hook-->
 			<?php chimps_post_byline(); ?>
 				<?php
-				if ( has_post_thumbnail() && $options->get($themeslug.'_show_featured_images') == '1' ) {
+				if ( has_post_thumbnail() && $options->get($themeslug.'_show_featured_images' && !is_single()) == '1' ) {
  		 			echo '<div class="featured-image">';
  		 			echo '<a href="' . get_permalink($post->ID) . '" >';
  		 				the_post_thumbnail();
@@ -156,7 +156,7 @@ function chimps_index_loop_content($content) { ?>
   					echo '</div>';
 				}
 			?>	
-				<div class="entry" <?php if ( has_post_thumbnail() && $options->get($themeslug.'_show_featured_images') == '1' ) { echo 'style="min-height: 115px;" '; }?>>
+				<div class="entry" <?php if ( has_post_thumbnail() && $options->get($themeslug.'_show_featured_images') == '1' && !is_single()  ) { echo 'style="min-height: 115px;" '; }?>>
 					<?php 
 						if ($options->get($themeslug.'_show_excerpts') == '1' && !is_single() ) {
 						the_excerpt();
