@@ -1,5 +1,5 @@
 /*   
-Theme Name: iFeature Pro 3
+Theme Name: iFeature Pro 
 Theme URI: http://cyberchimps.com/ifeaturepro
 Description: iFeature Pro 3 is a Professional WordPress Theme designed by CyberChimps.com. iFeature Pro 3 features an elegant Apple-like design with support for HTML5 and CSS3, intuitive theme options, post formats support, per-page options with Drag & Drop Page Elements including the iFeature Pro Slider, Page content, iFeature Post Carrousel, Twitter bar, Callout section, and Widgetized boxes. iFeature Pro 3 also offers eight color options, custom color options, custom logo support, social icons, a widgetized sidebar and footer, and custom typography options.
 Author: CyberChimps WordPress Themes
